    If this guess results in assigning a vat type, the invoice will no longer be
    sent as concept.
- WC: The completor phase now makes an even greater effort to determine the vat
  type by looking at the result of the 'woocommerce_order_is_vat_exempt' filter
  (mostly based on the 'is_vat_exempt' meta data as set by (a.o.) the
  woocommerce-eu-vat-assistant plugin.

Refactorings:
- ALL: Creator::setInvoiceSource(): parameter in overrides was not everywhere
  named as in parent method.
- HS: Use Creator::VatRateSource_Exact0 for 0 vat rates.

6.1.1 (2020-12-22) (MA only)
----------------------------
Bugs
- MA2: Renaming the registration form into the register form (done in 6.0.2) was
  not done in MA2 specific code.
- ALL: id 'intro' was used twice in the register form (and MA2 faults on it).

6.1.0 (2020-12-21)
------------------
Important:
- ALL: Maak de plugin brexit-proof door geen gebruik meer te maken van een hard
  gecodeerde lijst van EU landen. Dit wordt nu aan de API gevraagd zodat de
  plugin in de toekomst niet meer bijgewerkt hoeft te worden bij een wijziging
  hierin.
- PS|OC|VM|HS: Het factuurstatusoverzicht is nu ook aan PrestaShop, OpenCart,
  VirtueMart en HikaShop toegevoegd.

Features:
- ALL: Het factuurstatusoverzicht wordt nu geladen via lazy-load.
- ALL: Op het factuurstatusoverzicht kun je nu de factuurgegevens opnieuw
  versturen als er een fout is ontdekt tussen de bestelling in de webshop en de
  factuur in Acumulus.
- ALL: Op het factuurstatusoverzicht heeft het veld waarop je de betaaldatum
  kunt invullen nu een standaardwaarde die op dezelfde manier bepaald wordt als
  bij automatische verzending.
- PS: html5 details elements worden nu nagebootst met javascript en css opmaak.
- PS: PS 1.5 and 1.6 will probably not work anymore, so only PS1.7 remains
  supported.
- WC: Tekst "buitenlandse btw" ingekort.
- ALL: Het registratieformulier maakt geen gebruik meer van html <details>. Dit